# cdo-flow

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
cdo_flow/: __init__.py  cli.py  dag.py  decorators.py  events.py  exceptions.py  provenance.py  step.py  workflow.py
cdo_flow/config/: loader.py  schema.py
cdo_flow/executors/: base.py  local.py  snakemake.py
cdo_flow/tui/: creation_wizard.py  history_browser.py
tests/: conftest.py  test_config_loader.py  test_dag.py  test_executors.py  test_map.py  test_positional_inputs.py  test_workflow.py
tests/fixtures/: sample_workflow.yml
