[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdo-flow"
version = "0.1.0"
description = "Workflow orchestration layer for CDO-based climate analysis"
requires-python = ">=3.10"
dependencies = [
    "python-cdo-wrapper>=1.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
snakemake = ["snakemake"]
hpc = ["dask-jobqueue"]
shapefile = ["geopandas", "shapely"]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "mypy",
    "ruff",
]

[project.scripts]
cdo-flow = "cdo_flow.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["cdo_flow"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
